* Default CODA definition path for CODA command line tools on Windows is
  now also ../share/coda/definitions instead of ../definitions.

* Fix wrong installation location of coda.jar on Windows.

2.20 2018-12-17
~~~~~~~~~~~~~~~

* The CODA IDL DLM files have been renamed from coda-idl.* to coda_idl.*
  (to better support CMake builds on Windows). Remove any old coda-idl.*
  files from the installation directory to prevent errors.

* The IDL, MATLAB, Python, and Java interface modules now link against the
  shared CODA library instead of the static version. The modules use an
  rpath setting based on the installation prefix to find the library.

* Removed the libcoda_internal.la target from the autotools build.
  Builds that used SUBPACKAGE_MODE should now use libcoda.la.

* The build system for Windows is now fully based on CMake and the binary
  installer is now created using WIX.

* Default CODA definition path for Python on Windows is now determined
  relative to coda.dll library location (../share/coda/definitions).

* The CODA C library now uses thread-local storage (TLS) variables
  internally to allow CODA to be used in multi-threaded applications.
  You will still have to call coda_init() separately for each thread and
  can't reuse products/cursors/etc. from one thread in another.

* Added -p/--path option to codacmp.

* Fixed issue in generated documentation of detection expressions.

* Fixed memory issue when trying to access (non-existing) attributes of an
  HDF5 dataset element.

* Fixed build system to work with automake 1.16.

* Updated SWIG generated files (for Java/Python interfaces) to SWIG 3.0.12.

* Fixed round() coda expression function for negative values
  (round(-0.6) was returning -2 instead of -1).

* Updated build system to link against HDF4 installations that use libhdf
  instead of libdf as library name.

2.19 2018-03-28
~~~~~~~~~~~~~~~

* Added support for netCDF CDF-5 (NC_64BIT_DATA).
